Fix wrapping of H1s

--- a/src/stylesheets/critical/section.css
+++ b/src/stylesheets/critical/section.css
@@ -72,7 +72,6 @@ section {
   & a {
     color: var(--corporate-color-blue);
     text-decoration: none;
-    white-space: nowrap;
 
     &:hover {
       text-decoration: underline;
